# telegraphite

./: .dockerignore  Dockerfile  README.md  example.env  pyproject.toml
.github/workflows/: tests.yml
scripts/: run.py
telegraphite/: cli.py  client.py  config.py
